--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
-body, html {
-	height: 100%;
-	min-width: 320px;
-	z-index: 0;
-	margin: 0;
-	padding: 0;
+
+body,
+html {
+  height: 100%;
+  min-width: 320px;
+  z-index: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #container {
-	/*display: flex;*/
-	/*flex-direction: row;*/
-	min-width: calc(var(--grid)*25); /* 1000px @ 40px grid */
-	min-height: 100%; /* 720px @ 40px grid */
-	width: 100%;
+  /*display: flex;*/
+  /*flex-direction: row;*/
+  min-width: calc(var(--grid)*25);
+  /* 1000px @ 40px grid */
+  min-height: 100%;
+  /* 720px @ 40px grid */
+  width: 100%;
 }
