--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,4 @@
   <mat-form-field>
-    <input matInput type="datetime-local" placeholder="start date">
+    <input matInput type="datetime-local" placeholder="start date"  [(ngModel)]="userDateTime" >
   </mat-form-field>
+  {{userDateTime | json}}
