--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,6 @@
+  <div style="margin-left: 5%;margin-top: 5%;"> 
   <mat-form-field>
     <input matInput type="datetime-local" placeholder="start date"  [(ngModel)]="userDateTime" >
   </mat-form-field>
-  {{userDateTime | json}}
+  <button mat-raised-button color="primary">GO</button>
+  </div>
