add endpoint and poc call endpoint

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -2,5 +2,5 @@
   <mat-form-field>
     <input matInput type="datetime-local" placeholder="start date"  [(ngModel)]="userDateTime" >
   </mat-form-field>
-  <button mat-raised-button color="primary">GO</button>
+  <button mat-raised-button color="primary" (click)="getData()">GO</button>
   </div>
