--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,5 +3,6 @@
     <input matInput type="datetime-local" placeholder="start date" [(ngModel)]="userDateTime">
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="getData()">GO</button>
+  <button mat-raised-button color="warn" (click)="resetData()">RESET</button>
 </div>
 <div class="map" id="map" style="margin-left: 5%;margin-right: 5%; height:80%"></div>
