--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
     <mat-toolbar color="primary">
       <span> International Space Station</span>
-      <!-- <span class="example-spacer"></span> -->
-      <button mat-button><b>Weather</b></button>
+      <button mat-button [routerLink]="'/weather'"><b>Weather</b></button>
       <button mat-button><b>Top stories</b></button>
       <button mat-button><b>People on the ISS</b></button>
     </mat-toolbar>
