add weather visualization

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,3 +1,25 @@
-<p>
-  weather works!
-</p>
+<div style="margin-left: 5%;margin-top: 5%;">
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>City</mat-label>
+    <input matInput placeholder="Ex. Chicago" value="Kuala Lumpur" [(ngModel)]="cityname">
+  </mat-form-field>
+  <button mat-raised-button color="primary" (click)="getWeather()">GO</button>
+</div>
+<div
+  style="background-color: #F0F0F0; width: 75%; padding: 20px; border: 1px solid #CCC; margin-top: 5%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
+  <p *ngIf="weather.length == 0">Searching...</p>
+  <div *ngIf="weather.length > 0">
+    <table style="width: 100%; text-align: center">
+      <thead></thead>
+      <tbody>
+        <tr>
+          <td *ngFor="let forecast of weather">
+            <img [src]="forecast.iconLink" />
+            <p>{{ forecast.highTemperature }}C / {{ forecast.highTemperature | fahrenheit }}F</p>
+            <p>{{ forecast.utcTime | moment }}</p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
