--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -5,4 +5,23 @@
   <button mat-raised-button color="primary" (click)="getData()">GO</button>
   <button mat-raised-button color="warn" (click)="resetData()">RESET</button>
 </div>
-<div class="map" id="map" style="margin-left: 5%;margin-right: 5%; height:80%"></div>
+<h2 style="margin-left: 5%;margin-top: 5%;">ISS LOCATION</h2>
+<div class="map" id="map" style="margin-left: 5%;margin-right: 5%; height:50%; width: 40%;"></div>
+<div
+style="background-color: #F0F0F0; width: 45%; padding: 20px; border: 1px solid #CCC; margin-top: 5%; position: absolute; top: 50%; left: 50%;">
+  <p *ngIf="weather.length == 0">Searching...</p>
+  <div *ngIf="weather.length > 0">
+    <table style="width: 100%; text-align: center">
+      <thead></thead>
+      <tbody>
+        <tr>
+          <td *ngFor="let forecast of weather">
+            <img [src]="forecast.iconLink" />
+            <p>{{ forecast.highTemperature }}C / {{ forecast.highTemperature | fahrenheit }}F</p>
+            <p>{{ forecast.utcTime | moment }}</p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
