--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-    <mat-toolbar color="primary">
-      <span> International Space Station</span>
+    <mat-toolbar style="background-color: #184e77;">
+      <span [routerLink]="''"> <b>International Space Station</b></span>
       <button mat-button [routerLink]="'/weather'"><b>Weather</b></button>
       <button mat-button><b>Top stories</b></button>
       <button mat-button><b>People on the ISS</b></button>
