update ui for input date

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div style="margin-left: 5%;margin-top: 5%;">
-  <mat-form-field>
+  <mat-form-field style="width: 20%;">
     <input matInput type="datetime-local" placeholder="start date" [(ngModel)]="userDateTime">
   </mat-form-field>&nbsp;
   <button mat-raised-button color="primary" (click)="getData()">GO</button>&nbsp;
