update weather map

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -6,7 +6,7 @@
   <button mat-raised-button color="primary" (click)="getWeather()">GO</button>
 </div>
 <div
-  style="background-color: #F0F0F0; width: 75%; padding: 20px; border: 1px solid #CCC; margin-top: 5%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
+  style="background-color: #a8dadc; width: 75%; padding: 20px; border: 1px solid #CCC; margin-top: 5%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
   <p *ngIf="weather.length == 0">Searching...</p>
   <div *ngIf="weather.length > 0">
     <table style="width: 100%; text-align: center">
